# greenmods

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  bun.lockb  config.pkl.example  gen_entities.sh  package.json
.cargo/: config.toml
apps/astro/: Cargo.toml
apps/astro-migrator/: Cargo.toml
apps/astro-migrator/src/: main.rs  models.rs
apps/greenmods/: Cargo.toml  README.md
apps/greenmods/src/: lib.rs  main.rs  tags.rs  verify.rs  vers.rs
apps/kjspkg-migrator/: Cargo.toml
apps/kjspkg-migrator/src/: fetcher.rs  migrator.rs  models.rs
crates/include_dir/: Cargo.toml
crates/jsglue/: Cargo.toml
crates/modhost-auth/src/: lib.rs
crates/modhost-badges/: Cargo.toml
crates/modhost-badges/src/: generator.rs
crates/modhost-config/: Cargo.toml
crates/modhost-config/src/: admin.rs  config.rs  ui.rs
crates/modhost-config/templates/: config.pkl
crates/modhost-core/: Cargo.toml  build.rs
crates/modhost-core/src/: info.rs  lib.rs  logger.rs
crates/modhost-core/src/error/: err.rs
crates/modhost-db/: Cargo.toml
crates/modhost-db-util/: Cargo.toml
crates/modhost-db-util/src/: collections.rs  gallery.rs  lib.rs  moderation.rs  projects.rs  users.rs  vers.rs
crates/modhost-db/src/: lib.rs  models.rs
crates/modhost-db/src/models/: user.rs
crates/modhost-db/src/util/: gallery.rs  token.rs  user.rs  ver.rs
crates/modhost-entities/: Cargo.toml
crates/modhost-entities/src/: gallery_images.rs  lib.rs  moderation_comment.rs  moderation_queue.rs  prelude.rs  project_authors.rs  project_collections.rs  project_relations.rs  project_repo_syncs.rs  project_version_refs.rs  project_versions.rs  projects.rs  sea_orm_active_enums.rs  user_tokens.rs  users.rs  version_files.rs
crates/modhost-middleware/: Cargo.toml
crates/modhost-middleware/src/: abuse.rs  lib.rs  security.rs
crates/modhost-middleware/src/logger/: macros.rs
crates/modhost-migrations/: Cargo.toml
crates/modhost-migrations/src/: lib.rs  m20250915_155846_initial_setup.rs  m20250915_155850_add_token_invalidation.rs  m20250915_155857_add_downloads_to_packages.rs  m20250915_155903_rename_minecraft.rs  m20250915_155908_add_license_and_visibility.rs  m20250915_155912_add_gallery_and_tags.rs  m20250915_155914_remove_views.rs  m20250915_155917_add_admin.rs  m20250915_155920_add_version_files.rs  m20250915_155922_add_moderation.rs  m20250915_155925_rename_all_to_project.rs  m20250915_155928_add_moderators.rs  m20260509_021500_add_collections_and_github_sync.rs  util.rs
crates/modhost-router/: Cargo.toml
crates/modhost-router/src/: lib.rs  openapi.rs
crates/modhost-router/src/admin/: add.rs  list.rs  mod.rs  remove.rs  stats.rs  stats_ws.rs
crates/modhost-router/src/admin/projects/: delete.rs  list.rs  mod.rs
crates/modhost-router/src/admin/users/: delete.rs  get.rs  list.rs
crates/modhost-router/src/auth/: callback.rs  login.rs
crates/modhost-router/src/collections/: create.rs  delete.rs  info.rs  list.rs  mod.rs  update.rs
crates/modhost-router/src/meta/: badge.rs
crates/modhost-router/src/moderation/: queue.rs
crates/modhost-router/src/projects/: create.rs  delete.rs  github.rs  info.rs  mod.rs  search.rs  update.rs
crates/modhost-router/src/projects/authors/: add.rs  list.rs  remove.rs
crates/modhost-router/src/projects/gallery/: create.rs  delete.rs  download.rs  info.rs  list.rs  update.rs
crates/modhost-router/src/projects/versions/: create.rs  delete.rs  download.rs  info.rs  latest.rs  list.rs  mod.rs  update.rs
crates/modhost-router/src/users/: info.rs  me.rs  pkg.rs
crates/modhost-router/src/util/: health.rs  mod.rs  stats.rs
crates/modhost-search/: Cargo.toml
crates/modhost-search/src/: db.rs  facets.rs  index.rs  lib.rs  models.rs
crates/modhost-server-core/: Cargo.toml
crates/modhost-server-core/src/: glue.rs  state.rs  worker.rs
crates/modhost-ui/: Cargo.toml
crates/modhost-ui/src/: bun.rs
crates/modhost/src/: lib.rs
crates/parse-wiki-text-2/: Cargo.toml
crates/quickhost/: Cargo.toml
crates/quickhost/src/: lib.rs
docs/: vps.md
pkl/: ModHost.pkl
tools/deptools/: Cargo.toml
ui/: package.json  tailwind.config.ts  vite.config.ts
ui/scripts/: postbuild-seo.mjs
ui/src/: app.d.ts  app.html  app.pcss
ui/src/components/auth/: AuthRequired.svelte  IconAuth.svelte
ui/src/components/icons/: IconBlank.svelte  TablerIconCurrentTheme.svelte
ui/src/components/modals/: ConfirmDeleteGenericModal.svelte  ConfirmDeleteImageModal.svelte  modals.ts
ui/src/components/ui/: CollectionCard.svelte  CollectionRail.svelte  Drawers.svelte  HeaderBar.svelte  LibrarySearchPage.svelte  PackageCard.svelte  Popups.svelte  ProjectScroller.svelte  ScrollingProject.svelte  Version.svelte  VersionFile.svelte
ui/src/components/ui/edit/: EditContainer.svelte  EditVersion.svelte
ui/src/components/ui/stepper/: BetterStep.svelte  BetterStepper.svelte  types.ts
ui/src/lib/: api.ts  config.ts  meta.ts  seo.ts  state.ts
ui/src/lib/skeleton/: transitions.ts
ui/src/lib/ui/: anchoredPopup.ts  contextMenu.ts  popups.ts
ui/src/lib/util/: clipboard.ts  download.ts  index.ts  markdown.ts  project-creator.ts
ui/src/routes/: +error.svelte  +layout.svelte  +page.svelte
ui/src/routes/admin/: +page.svelte
ui/src/routes/admin/projects/: +page.svelte
ui/src/routes/admin/users/: +page.svelte
ui/src/routes/collections/: +page.svelte
ui/src/routes/collections/[id]/: +page.svelte
ui/src/routes/collections/new/: +page.svelte
ui/src/routes/new/: +page.svelte  Step1.svelte  Step2.svelte  Step3.svelte  Step4.svelte  Step5.svelte
ui/src/routes/one/: +page.svelte
ui/src/routes/one/s/: +page.svelte
ui/src/routes/p/[id]/: +layout.svelte  +page.svelte
ui/src/routes/p/[id]/edit/: +layout@.svelte  +page.svelte
ui/src/routes/p/[id]/edit/gallery/: +page.svelte
ui/src/routes/p/[id]/gallery/: +page.svelte
ui/src/routes/p/[id]/versions/: +page.svelte
ui/src/routes/s/: +page.svelte
ui/src/routes/u/[id]/: +page.svelte
ui/src/routes/zero/: +page.svelte
ui/src/routes/zero/s/: +page.svelte
ui/src/themes/: greenmods.ts
ui/static/: robots.txt
(+8 files in other folders)
