[workspace]
resolver = "2"
members = ["./apps/*", "./crates/*", "./tools/*"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/RedstoneWizard08/ModHost"
homepage = "https://github.com/RedstoneWizard08/ModHost"
authors = ["RedstoneWizard08"]
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.3", features = ["macros", "multipart", "ws"] }
axum-core = "0.5.2"
axum-extra = { version = "0.10.1", features = ["cookie", "typed-header"] }
base64 = "0.22.1"
bytes = "1.10.1"
cfg-if = "1.0.0"
chrono = { version = "0.4.40", features = ["pure-rust-locales", "serde"] }
clap = { version = "4.5.37", features = ["derive", "color"] }
clap-verbosity-flag = "3.0.2"
clap_complete = "4.5.47"
colored = "3.0.0"
config = "0.15.11"
const_format = "0.2.34"
crates_io_api = "0.11.0"
crossbeam-channel = "0.5.15"
ctrlc = "3.4.6"
derive_builder = "0.20.2"
diesel = { version = "2.2.9", features = ["chrono", "postgres"] }
diesel-async = { version = "0.5.2", features = ["tokio", "postgres", "deadpool"] }
diesel_async_migrations = "0.15.0"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
duration-str = "0.17.0"
flate2 = "1.1.1"
futures = "0.3.31"
futures-util = "0.3.31"
glob = "0.3.2"
http = "1.3.1"
http-body-util = "0.1.3"
hyper-util = { version = "0.1.11", features = ["tokio"] }
hyper = { version = "1.6.0", features = ["client"] }
ignore = "0.4.23"
indicatif = "0.17.11"
itertools = "0.14.0"
lazy_static = "1.5.0"
lenient_semver = { version = "0.4.2", features = ["version_serde"] }
log = "0.4.27"
meilisearch-sdk = "0.28.0"
mime_guess = "2.0.5"
oauth2 = "5.0.0"
object_store = { version = "0.12.0", features = ["aws"] }
octocrab = "0.44.0"
once_cell = "1.21.3"
openssl-sys = { version = "0.9.107", features = ["vendored"] }
pq-sys = { version = "0.7.1", features = ["bundled"] }
proc-macro2 = "1.0.95"
quote = "1.0.40"
random-string = "1.1.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls", "multipart", "stream", "blocking"] }
ron = "0.10.1"
rsbadges = "1.1.5"
semver = { version = "1.0.26", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde-this-or-that = "0.5.0"
serde_yaml = "0.9.34"
serde-xml-rs = "0.7.0"
sha-1 = "0.10.1"
sysinfo = "0.34.2"
tar = "0.4.44"
tempfile = "3.19.1"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["process", "rt", "rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.26.2", features = ["rustls"] }
toml = "0.8.20"
toml_edit = "0.22.24"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["ansi", "env-filter", "registry"] }
tungstenite = { version = "0.26.2", features = ["rustls"] }
url = "2.5.4"
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono", "yaml"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
zip = "2.6.1"

axumite = { version = "0", path = "./crates/axumite" }
imghdr = { version = "0", path = "./crates/imghdr", features = ["serde"] }
include_dir = { version = "0", path = "./crates/include_dir" }
include_dir_macros = { version = "0", path = "./crates/include_dir_macros" }
jsglue = { version = "0", path = "./crates/jsglue" }
modhost = { version = "0", path = "./crates/modhost" }
modhost-auth = { version = "0", path = "./crates/modhost-auth" }
modhost-badges = { version = "0", path = "./crates/modhost-badges" }
modhost-core = { version = "0", path = "./crates/modhost-core" }
modhost-config = { version = "0", path = "./crates/modhost-config" }
modhost-db = { version = "0", path = "./crates/modhost-db" }
modhost-db-util = { version = "0", path = "./crates/modhost-db-util" }
modhost-middleware = { version = "0", path = "./crates/modhost-middleware" }
modhost-router = { version = "0", path = "./crates/modhost-router" }
modhost-search = { version = "0", path = "./crates/modhost-search" }
modhost-server-core = { version = "0", path = "./crates/modhost-server-core" }
modhost-ui = { version = "0", path = "./crates/modhost-ui" }
parse-wiki-text-2 = { version = "0", path = "./crates/parse-wiki-text-2" }
quickhost = { version = "0", path = "./crates/quickhost" }
opentelemetry-appender-tracing = { version = "0.29.1" }
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio", "trace"] }
opentelemetry = { version = "0.29.1" }
axum-tracing-opentelemetry = { version = "0.28.0" }
opentelemetry-otlp = { version = "0.29.0", features = ["tonic"] }
tracing-opentelemetry = { version = "0.30.0" }

[workspace.metadata.cargo-shear]
ignored = ["pq-sys", "openssl-sys"]
