[workspace]
resolver = "2"
members = ["./apps/*", "./crates/*", "./tools/*"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/RedstoneWizard08/ModHost"
homepage = "https://github.com/RedstoneWizard08/ModHost"
authors = ["RedstoneWizard08"]
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.99"
askama = "0.14.0"
axum = { version = "0.8.4", features = ["macros", "multipart", "ws"] }
axum-core = "0.5.2"
axum-extra = { version = "0.10.1", features = ["cookie", "typed-header"] }
base64 = "0.22.1"
bytes = "1.10.1"
cfg-if = "1.0.3"
chrono = { version = "0.4.42", features = ["pure-rust-locales", "serde"] }
clap = { version = "4.5.47", features = ["derive", "color"] }
clap-verbosity-flag = "3.0.4"
clap_complete = "4.5.57"
colored = "3.0.0"
config = "0.15.16"
const_format = "0.2.34"
crates_io_api = "0.12.0"
crossbeam-channel = "0.5.15"
ctrlc = "3.5.0"
derive_builder = "0.20.2"
dotenvy = "0.15.7"
duration-str = "0.17.0"
flate2 = "1.1.2"
futures = "0.3.31"
futures-util = "0.3.31"
glob = "0.3.3"
http = "1.3.1"
http-body-util = "0.1.3"
hyper-util = { version = "0.1.17", features = ["tokio"] }
hyper = { version = "1.7.0", features = ["client"] }
ignore = "0.4.23"
indicatif = "0.18.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
lenient_semver = { version = "0.4.2", features = ["version_serde"] }
log = "0.4.28"
meilisearch-sdk = "0.29.1"
mime_guess = "2.0.5"
oauth2 = "5.0.0"
object_store = { version = "0.12.3", features = ["aws"] }
octocrab = "0.45.0"
once_cell = "1.21.3"
openssl-sys = { version = "0.9.109", features = ["vendored"] }
pq-sys = { version = "0.7.2", features = ["bundled"] }
proc-macro2 = "1.0.101"
quote = "1.0.40"
random-string = "1.1.0"
regex = "1.11.2"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls", "multipart", "stream", "blocking"] }
ron = "0.11.0"
rsbadges = "1.1.5"
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.145"
serde_norway = "0.9.42"
serde-this-or-that = "0.5.0"
serde-xml-rs = "0.8.1"
sha-1 = "0.10.1"
strum = "0.27.2"
strum_macros = "0.27.2"
sysinfo = "0.37.0"
tar = "0.4.44"
tempfile = "3.22.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["process", "rt", "rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.27.0", features = ["rustls"] }
toml = "0.9.6"
toml_edit = "0.23.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["ansi", "env-filter", "registry"] }
tungstenite = { version = "0.27.0", features = ["rustls"] }
url = "2.5.7"
utoipa = { version = "5.4.0", features = ["chrono", "yaml"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
zip = "5.1.1"

opentelemetry-appender-tracing = { version = "0.30.1" }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio", "trace"] }
opentelemetry = { version = "0.30.0" }
axum-tracing-opentelemetry = { version = "0.30.0" }
opentelemetry-otlp = { version = "0.30.0", features = ["tonic"] }
tracing-opentelemetry = { version = "0.31.0" }

async-std = { version = "1.13.2", features = ["attributes", "tokio1"] }
sea-orm = { version = "2.0.0-rc.6", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
sea-orm-migration = { version = "2.0.0-rc.6", features = ["runtime-tokio-rustls", "sqlx-postgres"] }

axumite = { version = "0", path = "./crates/axumite" }
imghdr = { version = "0", path = "./crates/imghdr", features = ["serde"] }
include_dir = { version = "0", path = "./crates/include_dir" }
include_dir_macros = { version = "0", path = "./crates/include_dir_macros" }
jsglue = { version = "0", path = "./crates/jsglue" }
modhost = { version = "0", path = "./crates/modhost" }
modhost-auth = { version = "0", path = "./crates/modhost-auth" }
modhost-badges = { version = "0", path = "./crates/modhost-badges" }
modhost-core = { version = "0", path = "./crates/modhost-core" }
modhost-config = { version = "0", path = "./crates/modhost-config" }
modhost-db = { version = "0", path = "./crates/modhost-db" }
modhost-db-util = { version = "0", path = "./crates/modhost-db-util" }
modhost-middleware = { version = "0", path = "./crates/modhost-middleware" }
modhost-router = { version = "0", path = "./crates/modhost-router" }
modhost-search = { version = "0", path = "./crates/modhost-search" }
modhost-server-core = { version = "0", path = "./crates/modhost-server-core" }
modhost-ui = { version = "0", path = "./crates/modhost-ui" }
modhost-migrations = { version = "0", path = "./crates/modhost-migrations" }
modhost-entities = { version = "0", path = "./crates/modhost-entities" }
parse-wiki-text-2 = { version = "0", path = "./crates/parse-wiki-text-2" }
quickhost = { version = "0", path = "./crates/quickhost" }

[workspace.metadata.cargo-shear]
ignored = ["pq-sys", "openssl-sys"]
