[package]
name = "astro-migrator"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
diesel.workspace = true
diesel-async.workspace = true
indicatif.workspace = true
itertools.workspace = true
modhost.workspace = true
modhost-config.workspace = true
modhost-db.workspace = true
modhost-search.workspace = true
object_store.workspace = true
ron.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-this-or-that.workspace = true
sha-1.workspace = true
tokio.workspace = true
tracing.workspace = true
