[package]
name = "astro"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
const_format.workspace = true
itertools.workspace = true
lenient_semver.workspace = true
modhost.workspace = true
once_cell.workspace = true
parse-wiki-text-2.workspace = true
quickhost.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde-xml-rs.workspace = true
tracing.workspace = true
