[package]
name = "greenmods"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
modhost.workspace = true
quickhost.workspace = true
tempfile.workspace = true
zip.workspace = true
