[package]
name = "kjspkg-migrator"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
dotenvy.workspace = true
flate2.workspace = true
http-body-util.workspace = true
indicatif.workspace = true
modhost.workspace = true
modhost-config.workspace = true
modhost-db.workspace = true
object_store.workspace = true
octocrab.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha-1.workspace = true
tar.workspace = true
tokio.workspace = true
tracing.workspace = true
sea-orm.workspace = true
