[package]
name = "modhost-badges"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
axum.workspace = true
modhost-core = { workspace = true, features = ["anyhow", "axum", "rsbadges", "serde-json", "utoipa"] }
reqwest.workspace = true
rsbadges.workspace = true
serde.workspace = true
utoipa.workspace = true
