[package]
name = "modhost-config"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
askama.workspace = true
config.workspace = true
duration-str.workspace = true
modhost-core = { workspace = true, features = ["url", "config", "s3", "toml"] }
oauth2.workspace = true
object_store.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
