[package]
name = "modhost-core"
version = "0.1.0"
description = "A common core module for ModHost."
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true

[features]
default = []
anyhow = ["dep:anyhow"]
askama = ["dep:askama"]
axum = ["dep:axum"]
chrono = ["dep:chrono"]
config = ["dep:config"]
crossbeam-channel = ["dep:crossbeam-channel"]
diesel = ["dep:diesel"]
diesel-async = ["dep:diesel-async"]
dotenvy = ["dep:dotenvy"]
glue = ["dep:jsglue"]
logging = ["dep:tracing-subscriber", "dep:log", "dep:opentelemetry-appender-tracing", "dep:opentelemetry_sdk", "dep:opentelemetry", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry"]
meilisearch = ["dep:meilisearch-sdk"]
octocrab = ["dep:octocrab"]
reqwest = ["dep:reqwest"]
rsbadges = ["dep:rsbadges"]
s3 = ["dep:object_store"]
semver = ["dep:semver"]
serde-json = ["dep:serde_json"]
serde-yaml = ["dep:serde_yaml"]
sysinfo = ["dep:sysinfo", "dep:utoipa", "dep:serde"]
tempfile = ["dep:tempfile"]
tokio = ["dep:tokio"]
toml = ["dep:toml"]
url = ["dep:url"]
utoipa = ["dep:utoipa"]
zip = ["dep:zip"]

[dependencies]
anyhow = { workspace = true, optional = true }
askama = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
config = { workspace = true, optional = true }
crossbeam-channel = { workspace = true, optional = true }
diesel = { workspace = true, optional = true }
diesel-async = { workspace = true, optional = true }
dotenvy = { workspace = true, optional = true }
jsglue = { workspace = true, optional = true }
log = { workspace = true, optional = true }
meilisearch-sdk = { workspace = true, optional = true }
object_store = { workspace = true, optional = true }
octocrab = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
rsbadges = { workspace = true, optional = true }
semver = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
sysinfo = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = [], optional = true }
tracing-subscriber = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
url = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }
zip = { workspace = true, optional = true }
opentelemetry-appender-tracing = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
