[package]
name = "modhost-db-util"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
diesel.workspace = true
diesel-async.workspace = true
itertools.workspace = true
modhost-core = { workspace = true, features = ["anyhow", "diesel", "diesel-async", "s3"] }
modhost-db.workspace = true
object_store.workspace = true
semver.workspace = true
