[package]
name = "modhost-db"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
chrono.workspace = true
diesel.workspace = true
diesel-async.workspace = true
diesel_async_migrations.workspace = true
diesel-derive-enum.workspace = true
itertools.workspace = true
modhost-core = { workspace = true, features = ["diesel", "diesel-async", "utoipa"] }
random-string.workspace = true
serde.workspace = true
utoipa.workspace = true

[target.'cfg(windows)'.dependencies]
openssl-sys.workspace = true
pq-sys.workspace = true

[package.metadata.cargo-shear]
ignored = ["pq-sys", "openssl-sys"]
