[package]
name = "modhost-db"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
chrono.workspace = true
itertools.workspace = true
modhost-core = { workspace = true, features = ["sea-orm", "utoipa"] }
modhost-entities.workspace = true
modhost-migrations.workspace = true
random-string.workspace = true
serde.workspace = true
utoipa.workspace = true

[package.metadata.cargo-shear]
ignored = ["pq-sys", "openssl-sys"]
