[package]
name = "modhost-middleware"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
axum.workspace = true
axum-core.workspace = true
cfg-if.workspace = true
chrono.workspace = true
# colored.workspace = true
lazy_static.workspace = true
tracing.workspace = true
url.workspace = true
