[package]
name = "modhost-migrations"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std.workspace = true
sea-orm-migration.workspace = true
