[package]
name = "modhost-search"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
chrono.workspace = true
itertools.workspace = true
meilisearch-sdk.workspace = true
modhost-config.workspace = true
modhost-core = { workspace = true, features = ["anyhow", "chrono", "meilisearch", "utoipa"] }
modhost-db.workspace = true
serde.workspace = true
utoipa.workspace = true
sea-orm.workspace = true
