[package]
name = "modhost-server-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
axum.workspace = true
base64.workspace = true
chrono.workspace = true
jsglue.workspace = true
modhost-core = { workspace = true, features = ["glue", "utoipa"] }
modhost-config.workspace = true
modhost-db.workspace = true
modhost-search.workspace = true
modhost-ui.workspace = true
oauth2.workspace = true
object_store.workspace = true
octocrab.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
utoipa.workspace = true
sea-orm.workspace = true
