[package]
name = "quickhost"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
axum.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
clap_complete.workspace = true
dotenvy.workspace = true
modhost.workspace = true
modhost-core = { workspace = true, features = ["askama"] }
tokio.workspace = true
tracing.workspace = true
