[package]
name = "deptools"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
crates_io_api.workspace = true
glob.workspace = true
itertools.workspace = true
tokio.workspace = true
toml_edit.workspace = true
